# mikrotik-telegram-bot

./: .env.example  LICENSE  README.md  build.py  pyproject.toml
resources/: message.html
src/: template.rsc
